Fix activity page numbers wrapping
[#77488018]

--- a/app/assets/stylesheets/mw-runtime-base.scss
+++ b/app/assets/stylesheets/mw-runtime-base.scss
@@ -301,7 +301,6 @@ div.intra-page-nav {
   margin-right: 8px;
   width: 100%;
   margin-top: 2px;
-  white-space: nowrap;
 }
 
 .pagination-item {
