--- a/app/assets/stylesheets/partials/_runtime-activity-nav.scss
+++ b/app/assets/stylesheets/partials/_runtime-activity-nav.scss
@@ -209,7 +209,6 @@ div.nav-menu-top {
   text-align: left;
   width: 100%;
   height: $nav-bar-height;
-  white-space: nowrap;
 }
 
 .pagination-item {
